# cpp-alexa

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
.config/: config.h.in  passwords.cmake
lib/private_lib/: esp8266.cpp  esp8266.h  eventHandler.cpp  eventHandler.h
src/: config.h  main.cpp  pins.h
